--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -7,6 +7,7 @@
     </div>
     <div class="p-2 flex items-center">
       <%= f.text_field :content, class: "flex-grow px-3 py-2 border border-gray-400 rounded-l-lg", placeholder: "Type your message here" %>
+      <%= f.hidden_field :chat_uuid, value: @chat.uuid%>
       <%= button_tag(type: "submit", class: "bg-blue-500 px-4 py-2 text-white rounded-r-lg") do %>
         <span>Send</span>
       <% end %>
@@ -34,7 +35,7 @@
   `;
   var chatMessages = document.getElementsByClassName("chat-message");
     var lastChatMessage = chatMessages[chatMessages.length - 1];
-  lastChatMessage.scrollIntoView();
+    lastChatMessage.scrollIntoView();
 
   // Append the new div element to the chat container
   chatContainer.appendChild(chatMessageDiv);
@@ -48,7 +49,13 @@
       var lastChatMessage = chatMessages[chatMessages.length - 1];
       lastChatMessage.scrollIntoView();
       setTimeout(function() {
-  lastChatMessage.scrollIntoView();
-  }, 100);
+      lastChatMessage.scrollIntoView();
+      }, 100);
     });
+
+    document.addEventListener('turbo:frame-load', function(event) {
+      var chatMessages = document.getElementsByClassName("chat-message");
+      var lastChatMessage = chatMessages[chatMessages.length - 1];
+      lastChatMessage.scrollIntoView();
+    })
 </script>
